Thu Jan 23 17:57:05 2003  Heather Drury  <drury_h@ociweb.com>

        * ace/README: Deleted non-ascii characters around ACE_HAS_PTHREAD_SETSTACK.

Thu Jan 23 17:44:38 UTC 2003  Craig Rodrigues  <crodrigu@bbn.com>

	* include/makeinclude/platform_freebsd.GNU: Remove gratuitous link
	  of -lstdc++.  g++ already does that for us.

Wed Jan 22 21:08:48 2003  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/WFMO_Reactor_Logging_Server.cpp (Quit_Handler):
          Sync with code in the book.

Wed Jan 22 18:12:41 2003  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/Service_Reporter.cpp:
        * examples/C++NPv2/Configurable_Logging_Server.cpp: Change the
          name of the static service descriptor from Reporter to
          Reporter_Descriptor. This is more descriptive and matches
          the book.

Wed Jan 22 18:08:27 UTC 2003  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/config-freebsd.h: Add ACE_HAS_SNPRINTF.  Fixes Log_Msg_Test.

Wed Jan 22 18:03:35 UTC 2003  Craig Rodrigues  <crodrigu@bbn.com>

	* include/makeinclude/platform_linux.GNU:
	* include/makeinclude/platform_linux_icc.GNU:
	* include/makeinclude/platform_linux_kcc.GNU:
	  Remove defines of _POSIX_THREADS and _POSIX_THREAD_SAFE_FUNCTIONS.
	  These POSIX constants are not meant to be defined by
	  the user.  The user must include <unistd.h> and *check*
	  the value of these constants.  On Linux glibc systems,
	  after including <unistd.h>, the header <bits/posix_opt.h>
	  will be eventually be included...these constants are
	  defined by the glibc implementation in that header.

Wed Jan 22 10:55:39 2003  Steve Huston  <shuston@riverace.com>

        * ace/config-tru64.h: Added ACE_HAS_SNPRINTF. Thanks to Vladimir
          Chovanec <Vladimir.CHOVANEC@asset.sk> for this fix.

Wed Jan 22 01:24:51 2003  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Message_Queue_T.h: Corrected the documentation for